2013-11-08  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Improve (Important!!) readVCFToListByGene function. Variants belonging to a certain gene can be distinguished.

2013-11-07  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Change (Important!!) to avoid extracting duplicated variants

2013-11-05  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support read MetaSkew file (outputs from 'rvtests --model skew')

2013-11-04  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add tabix.read.header() to read header lines of tabix files

2013-11-02  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add tabix.read.table() to directly read tabix file as data frame

2013-09-27  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add more unit-test codes
	* Fix BCF reading bug
	* Revise to give friendly error messages

2013-09-25  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support BCF file

2013-09-16  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support load parameters estimated from null model

2013-09-15  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support loading case/control frequencies from meta-analysis results

2013-08-29  Xiaowei Zhan  <zhanxw@amd.csgstat.sph.umich.edu>

	* Add automatic test cases

2013-08-28  Xiaowei Zhan  <zhanxw@amd.csgstat.sph.umich.edu>

	* Fix crashing when loding meta analysis files

2013-08-01  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support loading HWE from all samples / cases only / controls only.

2013-07-28  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Allow loading score statistics only (skipping covariance files)

2013-07-26  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Support site only VCF files

2013-05-25  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>

	* Add support for binary trait

2013-05-24  Xiaowei Zhan  <zhanxw@fantasia.csgstat.sph.umich.edu>
