@@ -1,10 +1,11 @@
-d01a118e39f07aebf0e6f2c20480318b *ChangeLog
-394734968fe0f9f8fb8518f52322d60b *DESCRIPTION
+9bd3f73b4b50e320a57c012d0c35e594 *ChangeLog
+9c5b8ef00fd70c951af8f8d6874f2cea *DESCRIPTION
 5dddedc37b0f792031695f083a52b3d8 *LICENSE
 f2295e29799bdc51bcb5c1b4af8a7769 *NAMESPACE
 22babc60249228174c1d90ee92e3e288 *R/seqminer.R
 ead63d8258b0216faf323b1bdb44b338 *configure
-5854d5b5e15c56c16a0b361a42150801 *configure.ac
+03bac3a45842690b138072e0f9cce234 *configure.ac
+d41d8cd98f00b204e9800998ecf8427e *configure.win
 1c96de0a2112c8f4cc6fbdb911a29912 *inst/doc/Manual.html
 b94af6795e947307028d232aee84d501 *inst/rvtests/rvtest.MetaCov.assoc.gz
 6ed4d335152649bfe88ce972d23440e5 *inst/rvtests/rvtest.MetaCov.assoc.gz.tbi
@@ -40,13 +41,14 @@ c9d4264ac702dcd474f1d9d0612d9a65 *man/readVCFToMatrixByGene.Rd
 a8302e38cecdde63fe299db71d42dd21 *src/BCFReader.h
 f2dfc84a2dfd0290c2dc8d910bee0b53 *src/Exception.cpp
 be9a7201c6ec40825118cd53f50f677f *src/Exception.h
-7903b619ccd4afcfd4a24c2450ea8b20 *src/GeneLoader.cpp
+7e2b3c5bff8130ef64ecb6af89ea3c85 *src/GeneLoader.cpp
 54e44e25de3378d5c46a8c0330f56320 *src/GeneLoader.h
 2c67e2a01d43d65bb166661240e492a4 *src/IO.cpp
-8cdc077fca4d85ad8865818c26078ca8 *src/IO.h
+f458b54af6c9983512d882d5737987ce *src/IO.h
 452538bf33dc4bb5bdfd912fa5c4d37c *src/Makevars.in
+d41d8cd98f00b204e9800998ecf8427e *src/Makevars.win
 35ab78cec79cc06f404e0e0eeac81dba *src/Maximum.h
-38e3aa0d8bd5b57cb57694bd4e1c45ac *src/OrderedMap.h
+0d7f7e3ffa803a16ce5b06adfcaea722 *src/OrderedMap.h
 a0cb740bd8ce684c99351d099e4bc26c *src/PatternMatch.cpp
 99e9112b8d7dc4a8137be090242d1f11 *src/PatternMatch.h
 10a321be45f3709dc6e77da323e0bc98 *src/PeopleSet.cpp
@@ -81,7 +83,6 @@ ff41af0fa67d5e91ccc7d9b66986a9b3 *src/VCFIndividual.h
 465d0a0528782dea287bf8260e970bdf *src/VCFInputFile.h
 dc2fd142e35674a1b5acdc2045b64607 *src/VCFOutputFile.h
 f847d5fd6668bec3c37e88f55d02e48f *src/VCFRecord.h
-f847d5fd6668bec3c37e88f55d02e48f *src/VCFRecord_flymake.h
 58c30e048f64b8bd851799393a7df1d5 *src/VCFUtil.cpp
 e9e2d549f9cdaf5f06505e30fb64ef8e *src/VCFUtil.h
 c99de6988f92eec0eb978e4298303d7d *src/VCFValue.h
@@ -90,9 +91,9 @@ aba13a3883d7d117af33a6d8fe8c1ed1 *src/bam_endian.h
 a6b6c0b958dfb0f0ff80d62c155edafa *src/bcf.c
 613fc63007d9a00f264af2666fea9a04 *src/bcf.h
 211ee67983ce33eb930c49e1266fcf23 *src/bcf_index.c
-f0a41df6253eaf09e6140d3e10d1c351 *src/bcfutils.c
+930069995256e8e2e2c25db302584e66 *src/bcfutils.c
 a9f135cf6c369a13d43510eaff9c983b *src/bedidx.c
-071589f63cdc9bd9cbc9fb5902f63c59 *src/bgzf.c
+8852127d3739f6200e474aa2bd69f6a7 *src/bgzf.c
 abd042e94b527d534410175167a07e4a *src/bgzf.h
 da5cc4b39d85aa5306d37b505915a9a7 *src/blocksort.c
 a046a912c4dcf43610d78761b80a85c2 *src/bzCompress.c
@@ -103,6 +104,7 @@ dbe49534045bebcd393d3d0d5ccec28a *src/bzip2.README
 433684bb4b14928660d748d3c65890a6 *src/bzlib.h
 1bd8c561910cfe13a8a837f75d3dd223 *src/bzlib_private.h
 6a0331bd872c8053af4bfa357fbd5415 *src/compress.c
+d41d8cd98f00b204e9800998ecf8427e *src/config.h
 5fbc88f708793e02b648d0fe48fbbe06 *src/config.h.in
 1339c92938d2594a6eecfa21c374d1b6 *src/crc32.c
 f28d16b67efecdfafa0d816a7d982124 *src/crc32.h
@@ -130,7 +132,7 @@ ec87be89b9bcca8ced80a70f857e823b *src/inftrees.h
 6b1b42bbbbe56cdd2bdec966f4fbc3e7 *src/kstring.c
 e6fa98213a711d4a816a9c35a0a90bdb *src/kstring.h
 1fa3a687fb32f1dce8e7b5f11453398f *src/randtable.c
-83b815e6e3ef2510cecf43b8f7ef4466 *src/rvMetaLoader.cpp
+d8a0aafd90a0b3968d1139c7fe14fbcc *src/rvMetaLoader.cpp
 bf4d9afcf19e4f3246fdcebaeeafb666 *src/rvMetaLoader.h
 bd0ada735ebc0423abae283bf1ef4dec *src/seqminer.c
 9ea09d7361b319cb5e4ca2d752a70e9d *src/tabix.h
@@ -141,7 +143,7 @@ af8a4b0b8282727178f70ab7f295348e *src/trees.c
 51fdcb3e2ccf60ca13c06920c89296a3 *src/trees.h
 e62eee8757fecfc2cfbf2dda8956097e *src/uncompr.c
 53fc599227476643816a4a82f647e9cb *src/vcf.c
-dbeab2c414080bf53c4723782c7c91dd *src/vcf2genoLoader.cpp
+ecc64ea435f682bcb9c5a879812fdb3a *src/vcf2genoLoader.cpp
 e7d01db88c60614c76e804c601770cca *src/vcf2genoLoader.h
 ae0ff652c3313d1b5cb7e5e45febd0cc *src/zconf.h
 f454cab418099da4ed65aec38bc0db80 *src/zlib.h
